fix BIOS disasm links

--- a/hardware/lcd/cmd/11.md
+++ b/hardware/lcd/cmd/11.md
@@ -11,4 +11,4 @@ Don't mess with this as it could possibly damage the LCD.
   * C raw: `LCD_CTRL = 0xA3;`
   * ASM: `LD LCD_CTRL, #0A3h`
 
-Set to normal in the BIOS during LCD initialization [here](../../../software/bios/disasm/#user-content-089C).
+Set to normal in the BIOS during LCD initialization [here](../../../software/bios/disasm.md#user-content-089C).
