--- a/hardware/lcd/cmd/16.md
+++ b/hardware/lcd/cmd/16.md
@@ -21,6 +21,6 @@ The docs provide the following table on page 8-32 and warn that other combinatio
 | Only the V/F circuit is used | 0 | 0 | 1 | X | X | O | V5, VSS2 | Open |
 | Only the external power supply is used | 0 | 0 | 0 | X | X | X | V1 to V5 | Open |
 
-In the BIOS, this is set to 0b111 when the [LCD is initialized](../../../software/bios/disasm/#user-content-08A4) and to 0b000 when the [LCD is turned off](../../../software/bios/disasm/#user-content-08E2).
+In the BIOS, this is set to 0b111 when the [LCD is initialized](../../../software/bios/disasm.md#user-content-08A4) and to 0b000 when the [LCD is turned off](../../../software/bios/disasm.md#user-content-08E2).
 
 It's very possible that the other modes do nothing or may damage the console. (TODO: real messaging)
