--- a/hardware/lcd/cmd/19.md
+++ b/hardware/lcd/cmd/19.md
@@ -19,4 +19,4 @@ Don't mess with this as it could possibly damage the LCD.
   * C raw: `LCD_CTRL = 0xAC;`
   * ASM: `LD LCD_CTRL, #0ACh`
 
-In the BIOS, this is turned on and set to 2 (blinking at approx. half second intervals) when the [LCD is initialized](../../../software/bios/disasm/#user-content-0894) and turned off when the [LCD is turned off](../../../software/bios/disasm/#user-content-08DF) as part of the [power save sequence](20.md).
+In the BIOS, this is turned on and set to 2 (blinking at approx. half second intervals) when the [LCD is initialized](../../../software/bios/disasm.md#user-content-0894) and turned off when the [LCD is turned off](../../../software/bios/disasm.md#user-content-08DF) as part of the [power save sequence](20.md).
