--- a/hardware/lcd/cmd/21.md
+++ b/hardware/lcd/cmd/21.md
@@ -9,4 +9,4 @@ No operation.
 
 Despite the name, this also exits test mode.
 
-The BIOS sends a NOP command when the [LCD is initialized](../../../software/bios/disasm/#user-content-0890). This is likely in order to combat unanticipated noise causing the driver to enter testing mode, as recommended in the docs.
+The BIOS sends a NOP command when the [LCD is initialized](../../../software/bios/disasm.md#user-content-0890). This is likely in order to combat unanticipated noise causing the driver to enter testing mode, as recommended in the docs.
